--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ color: red;
 	justify-content: center;
 	background:  green;
 	border-radius: 50%;
-	margin: 380px 30px;
+	margin: -140px 30px;
 	color: white;
 	text-decoration: none;
 	font-size: 20px;
@@ -92,17 +92,34 @@ color: red;
 	height: 500px;
 	width: 335px;
 	padding: 20px 35px;
-	background: #191919;
+    background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 40px;
-	margin: 50px;
+	margin: 35px 200px;
 	position: relative;
 	overflow: hidden;
 	text-align: center;
 }
+img{
+    height: 180px;
+    width: 180px;
+    margin: 10px;
+    border-radius: 50%;
+}
+#media h4{
+    color: white;
+    font-family: monospace;
+    font-size: 30px;
+    margin: 150px 30px;
+    
+}
+#media h3{
+    color: white;
+    font-family: monospace;
+    font-size: 20px;
+}
 h5{
-	color: #ff6600;
+	color: white;
     font-family: sans-serif;
-    font-weight: arial;
 	font-size: 40px;
 	margin-bottom: 15px;
 }
