--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,8 @@ color: red;
 	text-align: center;
 }
 img{
-    height: 180px;
-    width: 180px;
+    height: 150px;
+    width: 150px;
     margin: 10px;
     border-radius: 50%;
 }
@@ -116,6 +116,30 @@ img{
     color: white;
     font-family: monospace;
     font-size: 20px;
+}
+#media h2{
+    color: #00ff6ad3;
+    font-family: sans-serif;
+    font-size: 15px;
+    margin-right: 45%;
+    margin-top: -11%;
+}
+#media p{
+    color: white;
+    margin-left: -5%;
+    font-family: monospace;
+}
+#media i{
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: green;
+    border-radius: 50%;
+    margin: 5px 20px;
+    font-size: 15px;
+    margin-right: 100%;
 }
 h5{
 	color: white;
