--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ color: red;
 	justify-content: center;
 	background:  green;
 	border-radius: 50%;
-	margin: -10px 30px;
+	margin: -10px 20px;
 	color: white;
 	text-decoration: none;
 	font-size: 20px;
@@ -102,14 +102,14 @@ color: red;
 img{
     height: 150px;
     width: 150px;
-    margin: 10px;
+    margin: 0px;
     border-radius: 50%;
 }
 #media h4{
     color: white;
     font-family: monospace;
     font-size: 25px;
-    margin: 15px 30px;
+    margin: 20px 30px;
     
 }
 #media h3{
@@ -142,6 +142,105 @@ img{
     margin-right: 100%;
 }
 #media i.fa-solid fa-envelope{
+    margin: -10%;
+}
+h2.phone{
+    margin-left: -5%;
+}
+p.phone{
+    margin-right: 20%;
+}
+h2.email{
+    margin-left: -6%;
+}
+p.email{
+    margin-right: 14%;
+}
+
+h5{
+	color: white;
+    font-family: sans-serif;
+	font-size: 40px;
+	margin-bottom: 15px;
+}
+
+/* Keinji's Contact */
+.social1{
+	display: flex;
+    
+}
+.social1 a{
+	width: 45px;
+	height: 45px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background:  green;
+	border-radius: 50%;
+	margin: -10px 20px;
+	color: white;
+	text-decoration: none;
+	font-size: 20px;
+}
+.social1 a:hover{
+	transform: scale(1.2);
+	transition: .4s;
+}
+
+.card1{
+	height: 500px;
+	width: 335px;
+	padding: 20px 35px;
+    background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 40px;
+	margin: -575px 780px;
+	position: relative;
+	overflow: hidden;
+	text-align: center;
+}
+img{
+    height: 150px;
+    width: 150px;
+    margin: 0px;
+    border-radius: 50%;
+}
+#media1 h4{
+    color: white;
+    font-family: monospace;
+    font-size: 25px;
+    margin: 20px 30px;
+    
+}
+#media1 h3{
+    color: white;
+    font-family: monospace;
+    font-size: 20px;
+}
+#media1 h2{
+    color: #00ff6ad3;
+    font-family: sans-serif;
+    font-size: 15px;
+    margin-right: 45%;
+    margin-top: -11%;
+}
+#media1 p{
+    color: white;
+    margin-left: -5%;
+    font-family: monospace;
+}
+#media1 i{
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: green;
+    border-radius: 50%;
+    margin: 5px 20px;
+    font-size: 15px;
+    margin-right: 100%;
+}
+#media1 i.fa-solid fa-envelope{
     margin: -10%;
 }
 h2.phone{
