--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,25 @@
 .text span1{
 color: red;
 }
+@keyframes slideInLeft{
+    from {
+        transform: translateX(-650px);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+.card {
+    animation-name: slideInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: ;
+}
 .social{
 	display: flex;
     
