--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,28 @@ color: red;
 
 .card {
     animation-name: slideInLeft;
-    animation-duration: 1s;
+    animation-duration: 0.6s;
     animation-timing-function: ease-in;
     animation-delay: 0s;
     animation-iteration-count: 1;
     animation-direction: normal;
-    animation-fill-mode: ;
+}
+@keyframes slideInRight{
+    from {
+        transform: translateX(650px);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+.card1 {
+    animation-name: slideInRight;
+    animation-duration: 0.6s;
+    animation-timing-function: ease-in;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
 }
 .social{
 	display: flex;
