--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,15 @@ h1.text1{
 }
 
 .text h1{
-   
+    animation: fadeIn 3s;
     font-size: 35px;
     color:white;
     position: absolute;
     bottom: 35%;
+}
+@keyframes fadeIn{
+    from { opacity: 0 }
+    to { opacity: 1 }
 }
 .text span{
     color: rgba(55, 235, 0, 0.747);
