--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
 .contents ul{
     display: flex;
     list-style: none;
-    margin: 10px 0px;
+    margin: 15px 0px;
     position: sticky;
 
 }
@@ -46,7 +46,7 @@
 }
 
 .contents ul li a{
-    font-size: 1.7rem;
+    font-size: 21px;
     font-weight: bold;
     text-decoration: none;
     color: green;
