--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     position: relative;
     font-family: monospace;
 }
-
+/* HOME */
 .contents{
     display: flex;
     justify-content: right;
@@ -100,6 +100,67 @@ h1.text1{
 }
 .text span1{
 color: rgba(55, 235, 0, 0.747);
+}
+/* ABOUT US*/
+.background1{
+    width: 100%;
+    height: 135vh;
+    background: url(../images/background.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    font-family: monospace;
+}
+.contents1{
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    background-color: rgba(0, 0, 0, 0.10);
+}
+.contents1 h1{
+    margin: 0.5%;
+    margin-right: 33%;
+    font-size: 1.8rem;
+    font-family: arial;
+    font-weight: 900;
+}
+.contents1 span{
+    color: rgb(8, 8, 8);
+}
+.contents1 span1{
+    color: rgb(0, 109, 24);
+}
+.contents1 ul{
+    display: flex;
+    list-style: none;
+    margin: 15px 0px;
+    position: sticky;
+
+}
+
+.contents1 ul li{
+    list-style: none;
+    display: inline-block;
+}
+
+.contents1 ul li a{
+    font-size: 21px;
+    font-weight: bold;
+    text-decoration: none;
+    color: green;
+    padding: 5px 20px;
+    transition: all .3s ease;
+}
+
+.contents1 ul li a:hover{
+    color: yellowgreen;
+}
+
+.text{
+    text-align: center;
+    margin-left: 25%;
+    font-weight: bold;
+    font-style: italic;
 }
 /* CONTACT US */
 @keyframes slideInLeft{
