--- a/css/style.css
+++ b/css/style.css
@@ -215,11 +215,108 @@ color: rgba(55, 235, 0, 0.747);
     font-size: 1.3rem;
     margin: -5%;
 }
+/* Tribute */
+.background2{
+    width: 100%;
+    height: 135vh;
+    background: url(../images/background.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    font-family: monospace;
+}
+.contents2{
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    background-color: rgba(0, 0, 0, 0.10);
+}
+.contents2 h1{
+    margin: 0.5%;
+    margin-right: 33%;
+    font-size: 1.8rem;
+    font-family: arial;
+    font-weight: 900;
+}
+.contents2 span{
+    color: rgb(8, 8, 8);
+}
+.contents2 span1{
+    color: rgb(0, 109, 24);
+}
+.contents2 ul{
+    display: flex;
+    list-style: none;
+    margin: 15px 0px;
+    position: sticky;
 
+}
+
+.contents2 ul li{
+    list-style: none;
+    display: inline-block;
+}
+
+.contents2 ul li a{
+    font-size: 21px;
+    font-weight: bold;
+    text-decoration: none;
+    color: green;
+    padding: 5px 20px;
+    transition: all .3s ease;
+}
+
+.contents2 ul li a:hover{
+    color: yellowgreen;
+}
+
+.text{
+    text-align: center;
+    margin-left: 25%;
+    font-weight: bold;
+    font-style: italic;
+}
+.card3{
+	height: 730px;
+	width: 900px;
+	padding: 20px 35px;
+    background-color: rgba(0, 0, 0, 0.3);
+    box-shadow: 2px 2px 13px 2px rgb(0, 133, 7);
+	border-radius: 40px;
+	margin: 35px 200px;
+	position: relative;
+	overflow: hidden;
+	text-align: center;
+}
+.card3 img{
+    height: 300px;
+    width: 370px;
+    border-radius: 5%;
+    margin: 1%;
+}
+.card3 h1{
+    color: White;
+    font-family: monospace;
+    font-size: 2.5rem;
+    font-weight: 900;
+}
+.card3 u{
+    color: rgb(207, 207, 207);
+}
+.card3 p{
+    color: rgb(196, 196, 196);
+    font-size: 1.3rem;
+    font-family: monospace;
+    margin: 2%;
+}
+.design img{
+    position: relative;
+    
+}
 /* CONTACT US */
 @keyframes slideInLeft{
     from {
-        transform: translateX(-650px);
+        transform: translateX(-600px);
     }
 
     to {
@@ -229,15 +326,15 @@ color: rgba(55, 235, 0, 0.747);
 
 .card {
     animation-name: slideInLeft;
-    animation-duration: 0.6s;
-    animation-timing-function: ease-in;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
     animation-delay: 0s;
     animation-iteration-count: 1;
     animation-direction: normal;
 }
 @keyframes slideInRight{
     from {
-        transform: translateX(650px);
+        transform: translateX(600px);
     }
 
     to {
@@ -246,8 +343,8 @@ color: rgba(55, 235, 0, 0.747);
 }
 .card1 {
     animation-name: slideInRight;
-    animation-duration: 0.6s;
-    animation-timing-function: ease-in;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
     animation-delay: 0s;
     animation-iteration-count: 1;
     animation-direction: normal;
