--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ color: rgba(55, 235, 0, 0.747);
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 10px 10px 10px 1px rgb(182, 181, 181);
 	border-radius: 40px;
-	margin: 35px 200px;
+	margin: 100px 200px;
 	position: relative;
 	overflow: hidden;
 	text-align: center;
@@ -211,6 +211,99 @@ color: rgba(55, 235, 0, 0.747);
 	transition: .6s;
 }
 .card2 h1{
+    color: white;
+    font-size: 1.3rem;
+    margin: -5%;
+}
+/* Activity 2*/
+.card4{
+	height: 95px;
+	width: 300px;
+	padding: 20px 35px;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 10px 10px 1px rgb(182, 181, 181);
+	border-radius: 40px;
+	margin: -235px 820px;
+	position: relative;
+	overflow: hidden;
+	text-align: center;
+}
+@keyframes slideInRight{
+    from {
+        transform: translateX(650px);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+.card4{   
+        animation-name: slideInRight;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in-out;
+        animation-delay: 0s;
+        animation-iteration-count: 1;
+        animation-direction: normal;
+}
+.card4 ul{
+    list-style: none;
+}
+.card4 ul li{
+    font-size: 2rem;
+    font-weight: 790;
+    font-family: arial;
+    margin: 5%;
+}
+.card4 ul li a{
+    text-decoration: none;
+    color: rgb(0, 173, 0);
+}
+.card4 ul li:hover{
+	transform: scale(1.2);
+	transition: .6s;
+}
+.card4 h1{
+    color: white;
+    font-size: 1.3rem;
+    margin: -5%;
+}
+/* Activity 3 */
+.card5{
+	height: 95px;
+	width: 300px;
+	padding: 20px 35px;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 10px 10px 1px rgb(182, 181, 181);
+	border-radius: 40px;
+	margin: 350px 500px;
+	position: relative;
+	overflow: hidden;
+	text-align: center;
+    animation: slidedown 0.5s ease;
+}
+@keyframes slidedown{
+    0%{ transform: translateY(550px); }
+    100% { transform: translateY(0);}
+}
+.card5 ul{
+    list-style: none;
+}
+.card5 ul li{
+    font-size: 2rem;
+    font-weight: 790;
+    font-family: arial;
+    margin: 5%;
+}
+.card5 ul li a{
+    text-decoration: none;
+    color: rgb(0, 173, 0);
+}
+.card5 ul li:hover{
+	transform: scale(1.2);
+	transition: .6s;
+}
+.card5 h1{
     color: white;
     font-size: 1.3rem;
     margin: -5%;
