--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,86 @@ color: rgba(55, 235, 0, 0.747);
     left: 5%;
     top: 171%;
 }
+.profile #email{
+    position: absolute;
+    top: 174%;
+    left: 5%;
+    font-size: 20px;
+    color: rgb(0, 133, 18);
+}
+.profile #fill{
+    position: absolute;
+    font-family: arial;
+    font-size: 0.9rem;
+    top: 175%;
+    left: 9%;
+}
+.profile #phone{
+    position: absolute;
+    top: 193%;
+    left: 5%;
+    font-size: 20px;
+    color: rgb(0, 133, 18);
+}
+.profile #fill1{
+    position: absolute;
+    font-family: arial;
+    font-size: 0.9rem;
+    top: 195%;
+    left: 9%;
+}
+.profile #address{
+    position: absolute;
+    top: 213%;
+    left: 5%;
+    font-size: 20px;
+    color: rgb(0, 133, 18);
+}
+.profile #fill2{
+    position: absolute;
+    font-family: arial;
+    font-size: 0.9rem;
+    top: 215%;
+    left: 9%;
+}
+.profile .education{
+    position: absolute;
+    font-size: 1.4rem;
+    left: 5%;
+    top: 260%;
+    color: rgb(0, 133, 18);
+}
+.profile .linear2{
+    position: absolute;
+    height: 2px;
+    width: 272px;
+    color: rgb(0, 133, 18);
+    background-color: rgb(0, 133, 18);
+    border-style: none;
+    left: 5%;
+    top: 280%;
+}
+.profile #year{
+    position: absolute;
+    font-size: 0.9rem;
+    font-family: arial;
+    left: 5%;
+    top: 287%;
+}
+.profile #level{
+    position: absolute;
+    font-size: 0.7rem;
+    font-family: arial;
+    left: 5%;
+    top: 298%;
+}
+.profile #school{
+    position: absolute;
+    font-size: 0.7rem;
+    font-family: arial;
+    left: 5%;
+    top: 298%;
+}
 /* Activities */
 .card2{
 	height: 95px;
