--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ color: rgba(55, 235, 0, 0.747);
 .profile .about{
     position: absolute;
     font-size: 1.4rem;
-    left: 40%;
+    left: 60%;
     top: 110%;
     color: rgb(0, 133, 18);
 }
@@ -214,13 +214,13 @@ color: rgba(55, 235, 0, 0.747);
     color: rgb(0, 133, 18);
     background-color: rgb(0, 133, 18);
     border-style: none;
-    left: 40%;
+    left: 60%;
     top: 131%;
 }
 .profile .aboutme{
     position: absolute;
     top: 135%;
-    left: 40%;
+    left: 60%;
     font-size: 0.9rem;
     font-family: arial;
 }
@@ -383,6 +383,44 @@ color: rgba(55, 235, 0, 0.747);
     font-family: arial;
     left: 25%;
     top: 363%;
+}
+.profile .rewards{
+    position: absolute;
+    font-size: 1.4rem;
+    left: 60%;
+    top: 200%;
+    color: rgb(0, 133, 18);
+}
+.profile .linear3{
+    position: absolute;
+    height: 2px;
+    width: 147px;
+    color: rgb(0, 133, 18);
+    background-color: rgb(0, 133, 18);
+    border-style: none;
+    left: 60%;
+    top: 220%;
+}
+.profile #award1{
+    position: absolute;
+    left: 62.3%;
+    top: 225%;
+    font-family: arial;
+    font-size: 0.9rem;
+}
+.profile #award2{
+    position: absolute;
+    left: 62.3%;
+    top: 235%;
+    font-family: arial;
+    font-size: 0.9rem;
+}
+.profile #award3{
+    position: absolute;
+    left: 62.3%;
+    top: 245%;
+    font-family: arial;
+    font-size: 0.9rem;
 }
 /* Activities */
 .card2{
