--- a/css/style.css
+++ b/css/style.css
@@ -1157,8 +1157,8 @@ color: rgba(55, 235, 0, 0.747);
     font-style: italic;
 }
 .card3{
-	height: 730px;
-	width: 900px;
+	height: 82%;
+	width: 65%;
 	padding: 20px 35px;
     background-color: rgba(0, 0, 0, 0.3);
     box-shadow: 2px 2px 13px 2px rgb(0, 133, 7);
